# map_my_world

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  docker.env  manage.py  pyproject.toml
apps/core/: admin.py
apps/core/migrations/: 0001_initial.py  0002_alter_city_country_alter_location_city_and_more.py
apps/core/models/: __init__.py  category.py  location.py  location_category.py
apps/location/bg_tasks/: register_location_view.py
apps/location/process/: __init__.py  category.py  city.py  location.py  location_category.py
apps/location/schema/enums/: location.py
apps/location/schema/inputs/: category.py  location.py
apps/location/schema/response/: category.py  interface.py  location.py
apps/location/schema/types/: category.py  city.py  location.py
apps/map_my_world/: admin.py  apps.py  category_router.py  location_router.py
apps/map_my_world/models/: __init__.py  city.py  country.py
apps/utils/: apps.py  decorator.py  enums.py  models.py  tags.py
apps/utils/data_dummy/: location.py
apps/utils/data_factories/: location.py
apps/utils/fixtures/json/: Category.json  City.json  Country.json  Location.json  LocationCategory.json
apps/utils/management/commands/: dump_limited_data.py  generate_data.py
config/: asgi.py  env_vars.py  wsgi.py
config/settings/: base.py
