[tool.poetry]
name = "map-my-world"
version = "0.1.0"
description = ""
authors = ["Argenis Vargas <argenis1818@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
fastapi = "^0.111.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
black = "^24.4.2"
safety = "^3.2.0"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
dj-database-url = "^2.1.0"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
factory-boy = "^3.3.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
